--- a/libgadu/lib/libgadu.pc.in
+++ b/libgadu/lib/libgadu.pc.in
@@ -4,7 +4,7 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: libgadu
-Version: CVS
+Version: 20031016
 Description: libgadu
 Libs: -L${libdir} -lgadu @LIBS_LIBGADU@
 Cflags: -I${includedir} @CFLAGS_LIBGADU@
