zmiana instalacji translacji i z apps/kadu na samo kadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1472 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/translations/Makefile.am
+++ b/translations/Makefile.am
@@ -1,10 +1,10 @@
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/locale"; \
-	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/locale";
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/translations"; \
+	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/kadu/translations";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.qm";
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_pl.qm";
