--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -217,14 +217,14 @@ uninstall-am: uninstall-info-am uninstall-local
 
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/locale"; \
-	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/locale";
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/translations"; \
+	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/kadu/translations";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.qm"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.qm";
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_pl.qm";
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
