kopiowanie ABOUT, ChangeLog, COPYING...
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1528 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,13 @@ EXTRA_DIST = admin kadu.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ka
 AUTOMAKE_OPTIONS = foreign 
 
 install-data-local:
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/"	
+	$(INSTALL_DATA) AUTHORS "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) ChangeLog "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) COPYING "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) HISTORY "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) README "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) THANKS "$(DESTDIR)/$(datadir)/kadu/"
 	@echo
 	@echo " **************************************"
 	@echo " * Kadu is now successfully installed *"
@@ -17,3 +24,8 @@ install-data-local:
 	@echo
 	@echo "                                  Kadu Team"
 	@echo
+
+uninstall-local:
+	rm -f "$(DESTDIR)/$(datadir)/kadu/*"
+	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/1"/*
+	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/2"/*
