--- a/Makefile.in
+++ b/Makefile.in
@@ -115,8 +115,8 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
 DIST_COMMON = README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
-	Makefile.in TODO aclocal.m4 admin/config.guess admin/config.sub \
-	admin/depcomp admin/install-sh admin/missing \
+	Makefile.in THANKS TODO aclocal.m4 admin/config.guess \
+	admin/config.sub admin/depcomp admin/install-sh admin/missing \
 	admin/mkinstalldirs config.h.in configure configure.ac
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -419,7 +419,7 @@ mostlyclean: mostlyclean-recursive
 
 mostlyclean-am: mostlyclean-generic
 
-uninstall-am: uninstall-info-am
+uninstall-am: uninstall-info-am uninstall-local
 
 uninstall-info: uninstall-info-recursive
 
@@ -437,10 +437,17 @@ uninstall-info: uninstall-info-recursive
 	maintainer-clean-recursive mostlyclean mostlyclean-generic \
 	mostlyclean-recursive tags tags-recursive uninstall \
 	uninstall-am uninstall-info-am uninstall-info-recursive \
-	uninstall-recursive
+	uninstall-local uninstall-recursive
 
 
 install-data-local:
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/"	
+	$(INSTALL_DATA) AUTHORS "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) ChangeLog "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) COPYING "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) HISTORY "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) README "$(DESTDIR)/$(datadir)/kadu/"
+	$(INSTALL_DATA) THANKS "$(DESTDIR)/$(datadir)/kadu/"
 	@echo
 	@echo " **************************************"
 	@echo " * Kadu is now successfully installed *"
@@ -450,6 +457,11 @@ install-data-local:
 	@echo
 	@echo "                                  Kadu Team"
 	@echo
+
+uninstall-local:
+	rm -f "$(DESTDIR)/$(datadir)/kadu/*"
+	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/1"/*
+	rm -f "$(DESTDIR)/$(datadir)/kadu/themes/emoticons/gadu-gadu/2"/*
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
