nowe linkowanie libgadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1556 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -74,6 +74,8 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+GADU_INCLUDES = @GADU_INCLUDES@
+GADU_LIBS = @GADU_LIBS@
 GSM_INCLUDES = @GSM_INCLUDES@
 GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
