--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -54,8 +54,8 @@ endif
 
 #kadu_METASOURCES = AUTO
 
-INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES)
-kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) $(GSM_LIBS) -lgadu
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
+kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) $(GSM_LIBS) $(GADU_LIBS)
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
 
