--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -74,6 +74,8 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+GADU_INCLUDES = @GADU_INCLUDES@
+GADU_LIBS = @GADU_LIBS@
 GSM_INCLUDES = @GSM_INCLUDES@
 GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -148,8 +150,8 @@ simlite.c simlite.h
 
 
 #kadu_METASOURCES = AUTO
-INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES)
-kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) $(GSM_LIBS) -lgadu
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
+kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) $(GSM_LIBS) $(GADU_LIBS)
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
 
