--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -74,6 +74,8 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+GADU_INCLUDES = @GADU_INCLUDES@
+GADU_LIBS = @GADU_LIBS@
 GSM_INCLUDES = @GSM_INCLUDES@
 GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
