--- a/translations/Makefile.am
+++ b/translations/Makefile.am
@@ -6,5 +6,9 @@ install-data-local:
 uninstall-local:
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_en.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_it.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_de.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_en.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_pl.qm";
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_it.qm";
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_de.qm";
