--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -224,8 +224,12 @@ install-data-local:
 uninstall-local:
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_en.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_it.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/kadu_de.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_en.qm"; \
 	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_pl.qm";
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_it.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/kadu/translations/qt_de.qm";
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
