porzadki w configure + xfree
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1603 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.in
+++ b/Makefile.in
@@ -88,12 +88,12 @@ PNG_LIBS = @PNG_LIBS@
 PTHREAD_CPPFLAGS = @PTHREAD_CPPFLAGS@
 PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
-QTINCDIR = @QTINCDIR@
-QTLIBDIR = @QTLIBDIR@
-QTMOCDIR = @QTMOCDIR@
-QTMT = @QTMT@
+QT_INCLUDES = @QT_INCLUDES@
+QT_LIBS = @QT_LIBS@
+QT_MOC_DIR = @QT_MOC_DIR@
 STRIP = @STRIP@
 VERSION = @VERSION@
+XFREE_INCLUDES = @XFREE_INCLUDES@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
