--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -88,12 +88,12 @@ PNG_LIBS = @PNG_LIBS@
 PTHREAD_CPPFLAGS = @PTHREAD_CPPFLAGS@
 PTHREAD_LDFLAGS = @PTHREAD_LDFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
-QTINCDIR = @QTINCDIR@
-QTLIBDIR = @QTLIBDIR@
-QTMOCDIR = @QTMOCDIR@
-QTMT = @QTMT@
+QT_INCLUDES = @QT_INCLUDES@
+QT_LIBS = @QT_LIBS@
+QT_MOC_DIR = @QT_MOC_DIR@
 STRIP = @STRIP@
 VERSION = @VERSION@
+XFREE_INCLUDES = @XFREE_INCLUDES@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
@@ -150,8 +150,8 @@ simlite.c simlite.h
 
 
 #kadu_METASOURCES = AUTO
-INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
-kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) $(GSM_LIBS) $(GADU_LIBS)
+INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
+kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS)
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
 
@@ -528,7 +528,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am uninstall-local
 
 
 %_moc.cpp: %.h
-	$(QTMOCDIR)/moc -o $@ $<
+	$(QT_MOC_DIR)/moc -o $@ $<
 
 install-data-local:
 	@if test -w "/usr/share"; then \
