--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -12,6 +12,7 @@ dock_widget.cpp dock_widget.h dock_widget_moc.cpp \
 emoticons.cpp emoticons.h emoticons_moc.cpp \
 events.cpp events.h events_moc.cpp \
 expimp.cpp expimp.h expimp_moc.cpp \
+gadu.cpp gadu.h gadu_moc.cpp \
 hints.cpp hints.h hints_moc.cpp \
 history.cpp history.h history_moc.cpp \
 ignore.cpp ignore.h ignore_moc.cpp \
