--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -118,7 +118,7 @@ ignore.cpp ignore.h ignore_moc.cpp \
 kadu.cpp kadu.h kadu_moc.cpp \
 main.cpp \
 message_box.cpp message_box.h message_box_moc.cpp \
-misc.cpp misc.h misc_moc.cpp\
+misc.cpp misc.h misc_moc.cpp \
 password.cpp password.h password_moc.cpp \
 pending_msgs.cpp pending_msgs.h pending_msgs_moc.cpp \
 personal_info.cpp personal_info.h personal_info_moc.cpp \
@@ -135,10 +135,16 @@ updates.cpp updates.h
 
 
 EXTRA_kadu_SOURCES = \
+modules.cpp modules.h modules_moc.cpp \
 voice.cpp voice.h voice_moc.cpp \
 voice_dsp.cpp voice_dsp.h voice_dsp_moc.cpp \
 simlite.c simlite.h
 
+
+@MODULES_TRUE@MODULES_OBJS = \
+@MODULES_TRUE@modules.$(OBJEXT) modules_moc.$(OBJEXT)
+
+@MODULES_FALSE@MODULES_OBJS = 
 
 @VOICE_TRUE@VOICE_OBJS = \
 @VOICE_TRUE@voice.$(OBJEXT) voice_moc.$(OBJEXT) \
@@ -152,7 +158,7 @@ simlite.c simlite.h
 
 #kadu_METASOURCES = AUTO
 INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
-kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS)
+kadu_LDADD = $(MODULES_OBJS) $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS)
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
 
@@ -218,7 +224,8 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/kadu_moc.Po ./$(DEPDIR)/main.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/message_box.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/message_box_moc.Po ./$(DEPDIR)/misc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/misc_moc.Po ./$(DEPDIR)/password.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/misc_moc.Po ./$(DEPDIR)/modules.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/modules_moc.Po ./$(DEPDIR)/password.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/password_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/pending_msgs.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/pending_msgs_moc.Po \
@@ -328,6 +335,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message_box_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/modules.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/modules_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/password.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/password_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pending_msgs.Po@am__quote@
