--- a/Makefile.in
+++ b/Makefile.in
@@ -79,6 +79,7 @@ GADU_LIBS = @GADU_LIBS@
 GSM_INCLUDES = @GSM_INCLUDES@
 GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+MODULES_LDFLAGS = @MODULES_LDFLAGS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
