--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -79,6 +79,7 @@ GADU_LIBS = @GADU_LIBS@
 GSM_INCLUDES = @GSM_INCLUDES@
 GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+MODULES_LDFLAGS = @MODULES_LDFLAGS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
@@ -159,7 +160,7 @@ simlite.c simlite.h
 #kadu_METASOURCES = AUTO
 INCLUDES = $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
 kadu_LDADD = $(MODULES_OBJS) $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS)
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(MODULES_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(MODULES_OBJS) $(VOICE_OBJS) $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
