--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -107,7 +107,9 @@ AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
 
 CLEANFILES = *.so *.o *_moc.cpp
 
-modules = $(patsubst %.cpp,%.so,$(wildcard *.cpp))
+module_spec_list = $(wildcard */spec)
+module_dir_list = $(patsubst %/spec,%,$(module_spec_list))
+module_so_list = $(foreach dir,$(module_dir_list),$(dir)/$(dir).so)
 subdir = modules
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
@@ -229,27 +231,54 @@ uninstall-am: uninstall-info-am uninstall-local
 	uninstall-info-am uninstall-local
 
 
-all: $(modules)
+all:
+	@for dir in $(module_dir_list); do \
+		echo; \
+		echo "Compiling $$dir module..."; \
+		source $$dir/spec; \
+		echo MODULE_SOURCES: $$MODULE_SOURCES; \
+		echo MODULE_MOC_HEADERS: $$MODULE_MOC_HEADERS; \
+		echo MODULE_HEADERS: $$MODULE_HEADERS; \
+		echo MODULE_CXXFLAGS: $$MODULE_CXXFLAGS; \
+		echo MODULE_LDFLAGS: $$MODULE_LDFLAGS; \
+		obj_files=" "; \
+		h_files=""; \
+		for src_file in $$MODULE_SOURCES; do \
+			obj_file=`expr $$src_file : "\(.*\).cpp"`.o; \
+			obj_files="$$obj_files $$dir/$$obj_file"; \
+		done; \
+		for moc_h_file in $$MODULE_MOC_HEADERS; do \
+			h_files="$$h_files $$dir/$$moc_h_file"; \
+			obj_file=`expr $$moc_h_file : "\(.*\).h"`_moc.o; \
+			obj_files="$$obj_files $$dir/$$obj_file"; \
+		done; \
+		for h_file in $$MODULE_HEADERS; do \
+			h_files="$$h_files $$dir/$$h_file"; \
+		done; \
+		$(MAKE) "module_obj_files=$$obj_files" \
+			"module_h_files=$$h_files" \
+			"module_cxxflags=$$MODULE_CXXFLAGS" \
+			"module_ldflags=$$MODULE_LDFLAGS" \
+			$$dir/$$dir.so; \
+	done
 
-%.so: %.o %_moc.o
-	if test -f $@.flags; then \
-		source $@.flags; \
-		echo MODULE_LDFLAGS=$$MODULE_LDFLAGS; \
-	fi; \
-	gcc -shared -o $@ $^ $$MODULE_LDFLAGS
+%.so: $(module_obj_files)
+	$(CC) -shared -o $@ $(module_obj_files) $(module_ldflags)
 
 %_moc.o: %_moc.cpp
-	gcc -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS)
+	$(CC) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)
 
-%.o: %.cpp %.h
-	gcc -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS)
+%.o: %.cpp $(module_h_files)
+	$(CC) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)
 
 %_moc.cpp: %.h
 	$(QT_MOC_DIR)/moc -o $@ $<
 
 install-data-local:
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/"	
-	$(INSTALL_DATA) *.so "$(DESTDIR)/$(datadir)/kadu/modules/"
+	@for dir in $(module_dir_list); do \
+		$(INSTALL_DATA) $$dir/$$dir.so "$(DESTDIR)/$(datadir)/kadu/modules/"; \
+	done
 
 uninstall-local:
 	rm -f "$(DESTDIR)/$(datadir)/kadu/modules/*.so"
