--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -282,9 +282,14 @@ all:
 	$(QT_MOC_DIR)/moc -o $@ $<
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/"	
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/"
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/kadu/modules/translations"
 	@for dir in $(module_dir_list); do \
+		echo ">>> Installing $$dir module ..."; \
 		$(INSTALL_DATA) $$dir/$$dir.so "$(DESTDIR)/$(datadir)/kadu/modules/"; \
+		if test -d $$dir/translations; then \
+			$(INSTALL_DATA) $$dir/translations/*.qm "$(DESTDIR)/$(datadir)/kadu/modules/translations/"; \
+		fi; \
 	done
 
 uninstall-local:
