dodane --enable-modules i --enable-voice
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1761 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,9 @@ config.status: configure
 	--build=$(DEB_BUILD_GNU_TYPE) \
 	--prefix=/usr \
 	--mandir=\$${prefix}/share/man \
-	--infodir=\$${prefix}/share/info
+	--infodir=\$${prefix}/share/info \
+	--enable-voice \
+	--enable-modules
 
 build: build-stamp
 build-stamp:  config.status
