domyslnie enable-modules i enable-voice
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1763 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -44,7 +44,6 @@ AC_DEFUN(FIND_FILE,[
 	FILE_DIR=
 	for dir in $2
 	do
-		echo DIR: $dir
 		if test -f $dir/$1
 		then
 			FILE_DIR=$dir
@@ -112,7 +111,7 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 	for mod_dir in modules/*; do \
 		if test -f $mod_dir/spec; then \
 			echo; \
-			echo "Configuring $mod_dir..."; \
+			echo ">>> Configuring $mod_dir..."; \
 			MODULE_LIBS=; \
 			MODULE_LIBS_PATH=; \
 			MODULE_INCLUDES=; \
@@ -171,6 +170,8 @@ CXXFLAGS="-fno-exceptions -pipe $user_cxxflags"
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
+AC_PROG_INSTALL
+AC_PROG_AWK
 
 ##################
 # PTHREAD Library
@@ -244,22 +245,20 @@ AC_SUBST(QT_MOC_DIR)
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])
+AC_CHECK_HEADERS([fcntl.h inttypes.h limits.h netinet/in.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
+AC_HEADER_STDBOOL
 AC_C_CONST
-AC_TYPE_PID_T
-AC_HEADER_TIME
-AC_STRUCT_TM
 
 # Checks for library functions.
-AC_FUNC_FORK
+AC_FUNC_ERROR_AT_LINE
+AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_STAT
-AC_FUNC_STRFTIME
-AC_FUNC_WAIT3
-AC_CHECK_FUNCS([floor inet_ntoa memset mkdir select strchr strdup strerror strtol])
+AC_FUNC_VPRINTF
+AC_CHECK_FUNCS([memset mkdir sqrt strdup])
+
 
 ########################################################################
 # parse configuration options
@@ -291,9 +290,9 @@ AC_SUBST(GADU_LIBS)
 AC_SUBST(GADU_INCLUDES)
 
 # Voice talk support
-AC_ARG_ENABLE(voice,[  --enable-voice          compile with experimental voice talk support])
+AC_ARG_ENABLE(voice,[  --disable-voice         compile without voice talk support])
 if test -z "$enable_voice"; then
-	enable_voice=no
+	enable_voice=yes
 fi
 if test "$enable_voice" = "yes"; then
 	AC_DEFINE(VOICE_ENABLED,1,[Define if voice talk support is enabled])
@@ -345,9 +344,9 @@ AC_SUBST(OPENSSL_LIBS)
 AC_SUBST(OPENSSL_INCLUDES)
 
 # Loadable modules support
-AC_ARG_ENABLE(modules,[  --enable-modules        compile with experimental loadable modules support])
+AC_ARG_ENABLE(modules,[  --disable-modules       compile without loadable modules support])
 if test -z "$enable_modules"; then
-	enable_modules=no
+	enable_modules=yes
 fi
 if test "$enable_modules" = "yes"; then
 	AC_DEFINE(MODULES_ENABLED,1,[Define if loadable modules support is enabled])
