--- a/Makefile.in
+++ b/Makefile.in
@@ -98,6 +98,8 @@ XFREE_INCLUDES = @XFREE_INCLUDES@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
+shared_modules = @shared_modules@
+static_modules = @static_modules@
 
 SUBDIRS = @MY_SUBDIRS@
 
