poczatek statycznej kompilacji modulow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1776 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -107,7 +107,7 @@ AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
 -DBINDIR="\"$(bindir)\"" -DDATADIR="\"$(datadir)\""
 
 
-CLEANFILES = */*.so */*.o */*_moc.cpp
+CLEANFILES = */*.so */*.a */*.o */*_moc.cpp */cxxflags */ldflags
 subdir = modules
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
@@ -231,7 +231,7 @@ uninstall-am: uninstall-info-am uninstall-local
 
 
 all:
-	@for dir in $(shared_modules); do \
+	@for dir in $(static_modules) $(shared_modules); do \
 		MODULE_SOURCES=; \
 		MODULE_MOC_HEADERS=; \
 		MODULE_HEADERS=; \
@@ -241,7 +241,7 @@ all:
 		MODULE_CXXFLAGS="$$MODULE_CXXFLAGS "`cat $$dir/cxxflags`; \
 		MODULE_LDFLAGS="$$MODULE_LDFLAGS "`cat $$dir/ldflags`; \
 		echo; \
-		echo ">>> Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..."; \
+		echo -e "\033[33m>>>\033[0m Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..."; \
 		echo; \
 		moc_cpp_files="" \
 		o_files=""; \
@@ -260,18 +260,25 @@ all:
 		for h_file in $$MODULE_HEADERS; do \
 			h_files="$$h_files $$dir/$$h_file"; \
 		done; \
+		file_name=$$dir.so; \
+		if test -z `expr " $(shared_modules) " : ".* \($$dir\) "`; then \
+			file_name=$$dir.a; \
+		fi; \
 		$(MAKE) "module_o_files=$$o_files" \
 			"module_h_files=$$h_files" \
 			"module_moc_cpp_files=$$moc_cpp_files" \
 			"module_cxxflags=$$MODULE_CXXFLAGS" \
 			"module_ldflags=$$MODULE_LDFLAGS" \
-			$$dir/$$dir.so; \
+			$$dir/$$file_name; \
 	done
 
 .SECONDARY: $(module_o_files) $(module_moc_cpp_files)
 
 %.so: $(module_o_files)
 	$(CC) -shared -o $@ $(module_o_files) $(module_ldflags)
+
+%.a: $(module_o_files)
+	ar r $@ $(module_o_files)
 
 .cpp.o: $(module_h_files)
 	$(CC) -o $@ -c -fPIC $< $(INCLUDES) $(AM_CPPFLAGS) $(module_cxxflags)
